# cuda-scratchpad

./: .clangd  README.md
source/: CMakeLists.txt  main.cu
